updating index and css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="sytle.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="navbar">
+      <h3><a href="">GitHub</a></h3>
+      <h3><a href="">Portfolio</a></h3>
+      <h3><a href="">Contact</a></h3>
+    </div>
+    <div id="container1">
+      <h1>Quy Nguyen Landing Page</h1>
+      <p>
+        Hi everyone welcome to my page. Currently I am attending DU Full Stack
+        BootCamp
+      </p>
+      <img id="image" src="image-1.jpg" alt="image of me" />
+      <p>This is an image of me</p>
+    </div>
+    <footer id="footer">
+      <form action="">
+        <label for="Name">First Name</label>
+        <input type="text" />
+        <br />
+        <label for="Email">Email</label>
+        <input type="email" name="email" id="email" />
+        <br />
+        <input type="submit" name="submit" id="submit" />
+      </form>
+    </footer>
+  </body>
 </html>
