updating index and css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       <img id="image" src="image-1.jpg" alt="image of me" />
       <p>This is an image of me</p>
     </div>
-    <footer id="footer">
+    <footer>
+        <div id="container2"
       <form action="">
         <label for="Name">First Name</label>
         <input type="text" />
@@ -32,6 +33,7 @@
         <br />
         <input type="submit" name="submit" id="submit" />
       </form>
+    </div>
     </footer>
   </body>
 </html>
